# sdw

./: .gitignore  Cargo.toml  DESIGN.md  README.md  a.ll  a.sdw  b.sdw  design.txt  iftesting.sdw  quick.sh  run.sh  rustfmt.toml  stub.sdw  target.ll  test.sdw
examples/: adv_variables.sdw  if.sdw  params.sdw  retvar.sdw  variable.sdw
frontend/: Cargo.toml
frontend/src/: main.rs
sdw/: Cargo.toml
sdw-bin/: Cargo.toml
sdw-bin/src/: main.rs  print.rs
sdw-bin/src/translate/: llvm.rs  mod.rs
sdw-lib/: Cargo.toml
sdw-lib/src/: common.rs  errors.rs  expression.rs  lex.rs  lib.rs  parse.rs  sem.rs
sdw-lib/src/parse/: expr.rs  function.rs  mod.rs  ret.rs  statements.rs
sdw/src/: errors.rs  lexer.rs  lib.rs
src/: common.rs  errors.rs  ir.rs  lex.rs  lexer.rs  lib.rs  main.rs  parse.rs  parser.rs
src/ast/: conditional.rs  expression.rs  function.rs  mod.rs  statement.rs  variables.rs
src/ast/expression/: comparisons.rs  mathops.rs  mod.rs  variable.rs
src/ast/statement/: conditional.rs  function.rs  mod.rs  variable.rs
tests/: test.py
tests/controlflow/if/: expected.ll
tests/functions/args/: expected.ll  test.sdw
tests/functions/empty/: expected.ll  test.sdw
tests/functions/lotsargs/: expected.ll  test.sdw
tests/functions/multiplefns/: expected.ll  test.sdw
tests/functions/returnint/: expected.ll  test.sdw
tests/mathematic/addition/: expected.ll  test.sdw
tests/mathematic/division/: expected.ll  test.sdw
tests/mathematic/multiplication/: expected.ll  test.sdw
tests/mathematic/subtraction/: expected.ll  test.sdw
(+2 files in other folders)
