[package]
name = "shadow"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.68", features = ["backtrace"] }
clap = { version = "4.1.1", features = ["derive"] }
dyn-clonable = "0.9.0"
dyn-clone = "1.0.10"
