[package]
name = "shadow"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.68", features = ["backtrace"] }
thiserror = "1.0"
clap = { version = "4.1.1", features = ["derive"] }
