[workspace]
members = [
    "./sdw-lib/",
    #"./sdw-bin/",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [dependencies]
# anyhow = { version = "1.0.68", features = ["backtrace"] }
# thiserror = "1.0"
# clap = { version = "4.1.1", features = ["derive"] }
